--- a/SentimentalAnalysisCNN.ipynb
+++ b/SentimentalAnalysisCNN.ipynb
@@ -127,25 +127,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviewerID</th>\n",
+       "      <th>asin</th>\n",
+       "      <th>reviewerName</th>\n",
+       "      <th>helpful</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>unixReviewTime</th>\n",
+       "      <th>reviewTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A4IL0CLL27Q33</td>\n",
+       "      <td>104800001X</td>\n",
+       "      <td>D. Brennan</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>I hate it when my shirt collars, not otherwise...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Perfect for collar stay management</td>\n",
+       "      <td>1390953600</td>\n",
+       "      <td>01 29, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A3Q5W5E7TDVLJF</td>\n",
+       "      <td>104800001X</td>\n",
+       "      <td>funnyc130</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>These little magnets are really powerful for t...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Neat</td>\n",
+       "      <td>1369958400</td>\n",
+       "      <td>05 31, 2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['reviewerID', 'asin', 'reviewerName', 'helpful', 'reviewText',\n",
-       "       'overall', 'summary', 'unixReviewTime', 'reviewTime'],\n",
-       "      dtype='object')"
+       "       reviewerID        asin reviewerName helpful  \\\n",
+       "0   A4IL0CLL27Q33  104800001X   D. Brennan  [0, 1]   \n",
+       "1  A3Q5W5E7TDVLJF  104800001X    funnyc130  [0, 0]   \n",
+       "\n",
+       "                                          reviewText  overall  \\\n",
+       "0  I hate it when my shirt collars, not otherwise...      5.0   \n",
+       "1  These little magnets are really powerful for t...      5.0   \n",
+       "\n",
+       "                              summary  unixReviewTime   reviewTime  \n",
+       "0  Perfect for collar stay management      1390953600  01 29, 2014  \n",
+       "1                                Neat      1369958400  05 31, 2013  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "productsReviewData.shape\n",
-    "productsReviewData.columns"
+    "productsReviewData.columns\n",
+    "productsReviewData.head(2)"
    ]
   },
   {
