NaiveBayes with negative padding returns poor result

--- a/SentimentalAnalysisNaiveBayesCleanedUp.ipynb
+++ b/SentimentalAnalysisNaiveBayesCleanedUp.ipynb
@@ -1166,6 +1166,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#No so good results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
    "outputs": [
