Add Multinomial Naive Bayes Sync the RNN/CNN before git rm files

--- a/SentimentalAnalysisCNN.ipynb
+++ b/SentimentalAnalysisCNN.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "#Import libraries\n",
     "\n",
-    "import gzip #for parsing gz files\n",
+    "mport gzip #for parsing gz files\n",
     "import pandas as pd\n",
     "import re \n",
     "import inflect #numeric/cardinal"
@@ -464,7 +464,7 @@
     "    #print(review)\n",
     "    for count, eachSent in enumerate(review):\n",
     "        #remove numbers\n",
-    "        eachSent = re.sub(\"r'\\d+/\\d+|\\d+|\\$\\d+.\\d+\", \" \", eachSent)\n",
+    "       eachSent = re.sub(\"r'\\d+/\\d+|\\d+|\\$\\d+.\\d+\", \" \", eachSent)\n",
     "        #remove string\n",
     "        eachSent = re.sub('[%s]' % re.escape(string.punctuation), ' ', eachSent)\n",
     "        #word tokens\n",
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -1522,8 +1522,21 @@
       "Epoch 3/5\n",
       "43198/43198 [==============================] - 204s 5ms/step - loss: 0.0030 - acc: 0.9995 - val_loss: 0.3362 - val_acc: 0.9340\n",
       "Epoch 4/5\n",
-      "14134/43198 [========>.....................] - ETA: 2:20 - loss: 0.0012 - acc: 0.9999"
+      "43198/43198 [==============================] - 209s 5ms/step - loss: 0.0034 - acc: 0.9993 - val_loss: 0.3726 - val_acc: 0.9252\n",
+      "Epoch 5/5\n",
+      "43198/43198 [==============================] - 203s 5ms/step - loss: 0.0034 - acc: 0.9991 - val_loss: 0.4185 - val_acc: 0.9292\n",
+      "Wall time: 16min 55s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x94df2d30>"
+      ]
+     },
+     "execution_count": 410,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1544,15 +1557,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15158/15158 [==============================] - 22s 1ms/step\n",
-      "Wall time: 21.6 s\n"
+      "15158/15158 [==============================] - 25s 2ms/step\n",
+      "Wall time: 24.8 s\n"
      ]
     }
    ],
@@ -1563,14 +1576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 93.64%\n"
+      "Accuracy: 94.14%\n"
      ]
     }
    ],
@@ -1580,14 +1593,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 18.4 s\n"
+      "Wall time: 22.1 s\n"
      ]
     }
    ],
@@ -1601,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -1631,35 +1644,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1.515800e+04</td>\n",
+       "      <td>15158.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>6.448644e-01</td>\n",
+       "      <td>0.668828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>4.547642e-01</td>\n",
+       "      <td>0.459213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>7.152557e-07</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1.190190e-02</td>\n",
+       "      <td>0.001779</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>9.943233e-01</td>\n",
+       "      <td>0.999994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>9.999747e-01</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1667,17 +1680,17 @@
       ],
       "text/plain": [
        "                  0\n",
-       "count  1.515800e+04\n",
-       "mean   6.448644e-01\n",
-       "std    4.547642e-01\n",
-       "min    7.152557e-07\n",
-       "25%    1.190190e-02\n",
-       "50%    9.943233e-01\n",
-       "75%    9.999747e-01\n",
-       "max    1.000000e+00"
+       "count  15158.000000\n",
+       "mean       0.668828\n",
+       "std        0.459213\n",
+       "min        0.000000\n",
+       "25%        0.001779\n",
+       "50%        0.999994\n",
+       "75%        1.000000\n",
+       "max        1.000000"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1738,7 @@
        "(15158,)"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,16 +1749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9364032194220874"
+       "0.9413511017284603"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1757,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1779,7 @@
        "15158"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,16 +1791,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4731, 327, 637, 9463)"
+       "(4597, 461, 428, 9672)"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
