--- a/SentimentalAnalysisRNN.ipynb
+++ b/SentimentalAnalysisRNN.ipynb
@@ -1010,7 +1010,8 @@
    "source": [
     "model = Sequential()\n",
     "#embedding_size = 8 > 0.8694\n",
-    "embedding_size = 8*3"
+    "embedding_size = 8*3\n",
+    "optimizer = Adam(lr=1e-3)\n"
    ]
   },
   {
@@ -1019,10 +1020,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Embedding(input_dim=num_words,\n",
-    "                    output_dim=embedding_size,\n",
-    "                    input_length=max_tokens,\n",
-    "                    name='layer2_embedding'))"
+    "model.add(Embedding(input_dim=num_words,output_dim=embedding_size, input_length=max_tokens, name='layer_embedding'))\n",
+    "model.add(GRU(units=16, return_sequences=True))\n",
+    "model.add(GRU(units=8, return_sequences=True))\n",
+    "model.add(GRU(units=4))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n"
    ]
   },
   {
@@ -1030,9 +1033,7 @@
    "execution_count": 272,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model.add(GRU(units=16, return_sequences=True))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1040,7 +1041,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(GRU(units=8, return_sequences=True))\n"
+    "\n"
    ]
   },
   {
@@ -1049,16 +1050,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(GRU(units=4))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 275,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dense(1, activation='sigmoid'))\n"
+    "\n"
    ]
   },
   {
@@ -1066,9 +1058,7 @@
    "execution_count": 276,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "optimizer = Adam(lr=1e-3)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
