Performance Analysis of 133K data set

--- a/CNN_RNN_TextBlob_PerformanceAnalysis.ipynb
+++ b/CNN_RNN_TextBlob_PerformanceAnalysis.ipynb
@@ -34,35 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#path = r\"/133KSample/*\"\n",
-    "path = r\"/testresults/*\"\n",
-    "path = r\"/noPadding/*\"\n",
+    "path = r\"/133KSample/*\"\n",
+    "#path = r\"/testresults/*\"\n",
+    "#path = r\"/noPadding/*\"\n",
     "path = currentPath + path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/tone/Study/NLP/noPadding/3rd_10K_NoPaddingNegativeReviews_CNN64_RNN32_TextBlob.csv', '/home/tone/Study/NLP/noPadding/2nd_10K_NoPaddingNegativeReviews_CNN64_RNN32_TextBlob.csv', '/home/tone/Study/NLP/noPadding/1st_10K_NoPaddingNegativeReviews_CNN64_RNN32_TextBlob.csv', '/home/tone/Study/NLP/noPadding/4th_10K_NoPaddingNegativeReviews_CNN64_RNN32_TextBlob.csv']\n"
+      "['/home/tone/Study/NLP/133KSample/2nd_NoPaddingNegativeReviews_RNN64_CNN64_TextBlob.csv', '/home/tone/Study/NLP/133KSample/2nd_PaddingNegativeReviews_RNN_CNN_TextBlob.csv', '/home/tone/Study/NLP/133KSample/1st_PaddingNegativeReviews_RNN64_CNN64_TextBlob.csv', '/home/tone/Study/NLP/133KSample/2nd_PaddingNegativeReviews_RNN64_CNN64_TextBlob.csv', '/home/tone/Study/NLP/133KSample/133K_Rand_NoPaddingNegativeReviews_RNN_CNN_TextBlob.csv']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -137,43 +137,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CNN</th>\n",
-       "      <td>18</td>\n",
-       "      <td>112</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2227</td>\n",
-       "      <td>13.85</td>\n",
-       "      <td>86.15</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>99.29</td>\n",
+       "      <td>1175</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>315</td>\n",
+       "      <td>28029</td>\n",
+       "      <td>45.49</td>\n",
+       "      <td>54.51</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>98.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RNN</th>\n",
-       "      <td>2</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2242</td>\n",
-       "      <td>1.54</td>\n",
-       "      <td>98.46</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>99.96</td>\n",
+       "      <td>1527</td>\n",
+       "      <td>1056</td>\n",
+       "      <td>749</td>\n",
+       "      <td>27595</td>\n",
+       "      <td>59.12</td>\n",
+       "      <td>40.88</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>97.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TextBlob</th>\n",
-       "      <td>27</td>\n",
-       "      <td>103</td>\n",
-       "      <td>101</td>\n",
-       "      <td>2142</td>\n",
-       "      <td>20.77</td>\n",
-       "      <td>79.23</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>95.50</td>\n",
+       "      <td>773</td>\n",
+       "      <td>1810</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>26340</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>70.07</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>92.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ActualRating</th>\n",
-       "      <td>130</td>\n",
+       "      <td>2583</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2243</td>\n",
+       "      <td>28344</td>\n",
        "      <td>100.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -184,14 +184,20 @@
        "</div>"
       ],
       "text/plain": [
-       "               tn   fp   fn    tp  tnPercent  fpPercent  fnPercent  tpPercent\n",
-       "CNN            18  112   16  2227      13.85      86.15       0.71      99.29\n",
-       "RNN             2  128    1  2242       1.54      98.46       0.04      99.96\n",
-       "TextBlob       27  103  101  2142      20.77      79.23       4.50      95.50\n",
-       "ActualRating  130    0    0  2243     100.00       0.00       0.00     100.00"
+       "                tn    fp    fn     tp  tnPercent  fpPercent  fnPercent  \\\n",
+       "CNN           1175  1408   315  28029      45.49      54.51       1.11   \n",
+       "RNN           1527  1056   749  27595      59.12      40.88       2.64   \n",
+       "TextBlob       773  1810  2004  26340      29.93      70.07       7.07   \n",
+       "ActualRating  2583     0     0  28344     100.00       0.00       0.00   \n",
+       "\n",
+       "              tpPercent  \n",
+       "CNN               98.89  \n",
+       "RNN               97.36  \n",
+       "TextBlob          92.93  \n",
+       "ActualRating     100.00  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 220,
    "metadata": {
     "scrolled": true
    },
@@ -241,43 +247,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CNN</th>\n",
-       "      <td>17</td>\n",
-       "      <td>103</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2242</td>\n",
-       "      <td>14.17</td>\n",
-       "      <td>85.83</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>99.51</td>\n",
+       "      <td>4131</td>\n",
+       "      <td>336</td>\n",
+       "      <td>1333</td>\n",
+       "      <td>27036</td>\n",
+       "      <td>92.48</td>\n",
+       "      <td>7.52</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>95.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RNN</th>\n",
-       "      <td>14</td>\n",
-       "      <td>106</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2229</td>\n",
-       "      <td>11.67</td>\n",
-       "      <td>88.33</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>98.93</td>\n",
+       "      <td>3507</td>\n",
+       "      <td>960</td>\n",
+       "      <td>518</td>\n",
+       "      <td>27851</td>\n",
+       "      <td>78.51</td>\n",
+       "      <td>21.49</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>98.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TextBlob</th>\n",
-       "      <td>39</td>\n",
-       "      <td>81</td>\n",
-       "      <td>112</td>\n",
-       "      <td>2141</td>\n",
-       "      <td>32.50</td>\n",
-       "      <td>67.50</td>\n",
-       "      <td>4.97</td>\n",
-       "      <td>95.03</td>\n",
+       "      <td>1336</td>\n",
+       "      <td>3131</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>26343</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>70.09</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>92.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ActualRating</th>\n",
-       "      <td>120</td>\n",
+       "      <td>4467</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2253</td>\n",
+       "      <td>28369</td>\n",
        "      <td>100.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -288,14 +294,20 @@
        "</div>"
       ],
       "text/plain": [
-       "               tn   fp   fn    tp  tnPercent  fpPercent  fnPercent  tpPercent\n",
-       "CNN            17  103   11  2242      14.17      85.83       0.49      99.51\n",
-       "RNN            14  106   24  2229      11.67      88.33       1.07      98.93\n",
-       "TextBlob       39   81  112  2141      32.50      67.50       4.97      95.03\n",
-       "ActualRating  120    0    0  2253     100.00       0.00       0.00     100.00"
+       "                tn    fp    fn     tp  tnPercent  fpPercent  fnPercent  \\\n",
+       "CNN           4131   336  1333  27036      92.48       7.52       4.70   \n",
+       "RNN           3507   960   518  27851      78.51      21.49       1.83   \n",
+       "TextBlob      1336  3131  2026  26343      29.91      70.09       7.14   \n",
+       "ActualRating  4467     0     0  28369     100.00       0.00       0.00   \n",
+       "\n",
+       "              tpPercent  \n",
+       "CNN               95.30  \n",
+       "RNN               98.17  \n",
+       "TextBlob          92.86  \n",
+       "ActualRating     100.00  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -343,43 +355,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CNN</th>\n",
-       "      <td>16</td>\n",
-       "      <td>96</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2248</td>\n",
-       "      <td>14.29</td>\n",
-       "      <td>85.71</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>99.43</td>\n",
+       "      <td>3894</td>\n",
+       "      <td>573</td>\n",
+       "      <td>703</td>\n",
+       "      <td>27666</td>\n",
+       "      <td>87.17</td>\n",
+       "      <td>12.83</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>97.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RNN</th>\n",
-       "      <td>10</td>\n",
-       "      <td>102</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2238</td>\n",
-       "      <td>8.93</td>\n",
-       "      <td>91.07</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>98.98</td>\n",
+       "      <td>3567</td>\n",
+       "      <td>900</td>\n",
+       "      <td>738</td>\n",
+       "      <td>27631</td>\n",
+       "      <td>79.85</td>\n",
+       "      <td>20.15</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>97.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TextBlob</th>\n",
-       "      <td>34</td>\n",
-       "      <td>78</td>\n",
-       "      <td>113</td>\n",
-       "      <td>2148</td>\n",
-       "      <td>30.36</td>\n",
-       "      <td>69.64</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>95.00</td>\n",
+       "      <td>1336</td>\n",
+       "      <td>3131</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>26343</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>70.09</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>92.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ActualRating</th>\n",
-       "      <td>112</td>\n",
+       "      <td>4467</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2261</td>\n",
+       "      <td>28369</td>\n",
        "      <td>100.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -390,14 +402,20 @@
        "</div>"
       ],
       "text/plain": [
-       "               tn   fp   fn    tp  tnPercent  fpPercent  fnPercent  tpPercent\n",
-       "CNN            16   96   13  2248      14.29      85.71       0.57      99.43\n",
-       "RNN            10  102   23  2238       8.93      91.07       1.02      98.98\n",
-       "TextBlob       34   78  113  2148      30.36      69.64       5.00      95.00\n",
-       "ActualRating  112    0    0  2261     100.00       0.00       0.00     100.00"
+       "                tn    fp    fn     tp  tnPercent  fpPercent  fnPercent  \\\n",
+       "CNN           3894   573   703  27666      87.17      12.83       2.48   \n",
+       "RNN           3567   900   738  27631      79.85      20.15       2.60   \n",
+       "TextBlob      1336  3131  2026  26343      29.91      70.09       7.14   \n",
+       "ActualRating  4467     0     0  28369     100.00       0.00       0.00   \n",
+       "\n",
+       "              tpPercent  \n",
+       "CNN               97.52  \n",
+       "RNN               97.40  \n",
+       "TextBlob          92.86  \n",
+       "ActualRating     100.00  "
       ]
      },
-     "execution_count": 212,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -445,43 +463,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CNN</th>\n",
-       "      <td>16</td>\n",
-       "      <td>93</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2247</td>\n",
-       "      <td>14.68</td>\n",
-       "      <td>85.32</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>99.25</td>\n",
+       "      <td>3773</td>\n",
+       "      <td>694</td>\n",
+       "      <td>561</td>\n",
+       "      <td>27808</td>\n",
+       "      <td>84.46</td>\n",
+       "      <td>15.54</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>98.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RNN</th>\n",
-       "      <td>14</td>\n",
-       "      <td>95</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2241</td>\n",
-       "      <td>12.84</td>\n",
-       "      <td>87.16</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>98.98</td>\n",
+       "      <td>3908</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1114</td>\n",
+       "      <td>27255</td>\n",
+       "      <td>87.49</td>\n",
+       "      <td>12.51</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>96.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TextBlob</th>\n",
-       "      <td>33</td>\n",
-       "      <td>76</td>\n",
-       "      <td>110</td>\n",
-       "      <td>2154</td>\n",
-       "      <td>30.28</td>\n",
-       "      <td>69.72</td>\n",
-       "      <td>4.86</td>\n",
-       "      <td>95.14</td>\n",
+       "      <td>1336</td>\n",
+       "      <td>3131</td>\n",
+       "      <td>2026</td>\n",
+       "      <td>26343</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>70.09</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>92.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ActualRating</th>\n",
-       "      <td>109</td>\n",
+       "      <td>4467</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2264</td>\n",
+       "      <td>28369</td>\n",
        "      <td>100.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -492,14 +510,20 @@
        "</div>"
       ],
       "text/plain": [
-       "               tn  fp   fn    tp  tnPercent  fpPercent  fnPercent  tpPercent\n",
-       "CNN            16  93   17  2247      14.68      85.32       0.75      99.25\n",
-       "RNN            14  95   23  2241      12.84      87.16       1.02      98.98\n",
-       "TextBlob       33  76  110  2154      30.28      69.72       4.86      95.14\n",
-       "ActualRating  109   0    0  2264     100.00       0.00       0.00     100.00"
+       "                tn    fp    fn     tp  tnPercent  fpPercent  fnPercent  \\\n",
+       "CNN           3773   694   561  27808      84.46      15.54       1.98   \n",
+       "RNN           3908   559  1114  27255      87.49      12.51       3.93   \n",
+       "TextBlob      1336  3131  2026  26343      29.91      70.09       7.14   \n",
+       "ActualRating  4467     0     0  28369     100.00       0.00       0.00   \n",
+       "\n",
+       "              tpPercent  \n",
+       "CNN               98.02  \n",
+       "RNN               96.07  \n",
+       "TextBlob          92.86  \n",
+       "ActualRating     100.00  "
       ]
      },
-     "execution_count": 213,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
