Adding couchbase connector to the project

--- a/couchbaseDB.ipynb
+++ b/couchbaseDB.ipynb
@@ -72,22 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<couchbase.bucket.Bucket bucket=AmazonProducts, nodes=['192.168.1.16:8091'] at 0x7fab11fd8748>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cluster.open_bucket(bucketNLP)"
+    "cluster.open_bucket(bucketNLP);"
    ]
   },
   {
